--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Timer</title>
+    <title>นับเวลาถอยหลังเปิด Delta force ในไทย </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
         <img src="https://assets.onecompiler.app/43dbdeufd/43dd37ycv/1000112750.png" alt="Logo" class="logo">
-        <span>Delta Force Thailand Launch Countdown</span>
+        <span>DELTA FORCE THAILAND COUNTDOWN </span>
     </div>
     <div class="container">
-        <h1>Countdown Timer</h1>
+        <h1>นับเวลาถอยหลังเปิดเซิฟ Deltaforce </h1>
         <div id="countdown">Loading...</div>
     </div>
     <script src="script.js"></script>
