--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>นับเวลาถอยหลังเปิด Delta force ในไทย </title>
+    <title>นับเวลาถอยหลังเปิด Delta Force ในไทย</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
         <img src="https://assets.onecompiler.app/43dbdeufd/43dd37ycv/1000112750.png" alt="Logo" class="logo">
-        <span>DELTA FORCE THAILAND COUNTDOWN </span>
+        <span>DELTA FORCE THAILAND COUNTDOWN</span>
     </div>
     <div class="container">
-        <h1>นับเวลาถอยหลังเปิดเซิฟ Deltaforce </h1>
+        <h1>นับเวลาถอยหลังเปิดเซิฟ Deltaforce</h1>
         <div id="countdown">Loading...</div>
+        <!-- แกลเลอรี่รูปภาพ 16:9 -->
+        <div class="image-gallery">
+            <img src="https://assets.onecompiler.app/43dbdeufd/43ddp5m69/1000112766.png" alt="Image 1" class="countdown-image">
+            <img src="https://assets.onecompiler.app/43dbdeufd/43ddp5m69/1000112765.jpg" alt="Image 2" class="countdown-image">
+            <img src="https://assets.onecompiler.app/43dbdeufd/43ddp5m69/1000112764.jpg" alt="Image 3" class="countdown-image">
+            <img src="https://assets.onecompiler.app/43dbdeufd/43ddp5m69/1000112754.jpg" alt="Image 4" class="countdown-image">
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
